<resources>
    <string name="app_name">Vultr</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="string_input_apikey">please input your api key</string>

    <string-array name="svg_load">
        <item>M 0.00 0.00 L 6.87 0.00 C 6.87 23.33 6.86 46.66 6.87 69.99 C 12.74 70.01 18.61 69.99 24.47 70.01 C 24.46 71.65 24.45 73.30 24.43 74.95 C 27.57 74.99 30.71 75.00 33.85 75.05 C 31.48 71.46 32.19 67.09 32.13 63.04 C 32.19 53.35 32.05 43.65 32.17 33.95 C 32.13 31.48 33.43 28.61 36.11 28.18 C 41.05 27.71 46.03 28.15 50.99 27.96 C 53.27 28.07 55.88 27.62 57.83 29.11 C 59.83 30.77 59.85 33.58 59.89 35.95 C 59.84 46.99 59.90 58.03 59.86 69.07 C 59.97 71.21 59.07 73.17 58.15 75.04 C 62.53 74.98 66.91 74.97 71.28 75.05 C 70.22 72.83 69.84 70.40 69.97 67.95 C 70.11 62.94 69.77 57.91 70.15 52.91 C 70.23 50.01 73.09 47.95 75.84 48.03 C 80.85 47.88 85.86 48.07 90.87 47.99 C 90.87 43.33 90.87 38.67 90.87 34.01 C 86.20 33.99 81.54 33.99 76.87 34.01 C 76.87 36.34 76.87 38.66 76.87 40.99 C 74.76 41.00 72.65 41.00 70.54 41.00 C 70.79 37.00 69.37 31.84 72.92 28.91 C 75.68 27.43 79.00 28.15 82.02 27.98 C 85.91 28.16 89.88 27.57 93.71 28.37 C 96.86 29.40 97.26 33.14 97.27 35.96 C 97.27 48.97 97.27 61.98 97.26 74.99 C 102.36 75.03 107.46 74.95 112.57 75.05 C 109.95 72.79 107.89 69.70 108.07 66.10 C 107.95 57.04 107.94 47.96 108.07 38.90 C 107.95 34.06 111.17 28.99 116.16 28.19 C 120.38 27.74 124.64 28.09 128.87 28.00 C 128.86 18.67 128.87 9.33 128.87 0.00 L 135.40 0.00 C 135.39 24.99 135.41 49.99 135.39 74.98 C 138.84 75.00 142.29 75.01 145.74 74.99 C 145.85 57.66 145.45 40.31 146.02 22.99 C 145.91 18.32 145.42 13.67 145.60 9.00 C 147.82 9.00 150.04 9.00 152.26 9.00 C 152.27 12.00 152.27 14.99 152.26 17.99 C 150.51 17.99 148.76 18.00 147.00 18.01 C 147.00 21.34 147.00 24.66 147.00 27.99 C 148.71 28.00 150.42 28.00 152.13 28.01 C 152.14 43.67 152.13 59.33 152.13 74.99 C 155.84 75.00 159.55 75.00 163.26 74.99 C 163.27 59.33 163.27 43.67 163.26 28.01 C 165.40 28.00 167.54 28.00 169.69 27.99 C 169.71 28.59 169.76 29.79 169.78 30.39 C 175.19 29.53 180.55 27.84 186.07 28.01 C 188.63 28.08 190.65 30.40 190.51 32.93 C 190.74 46.94 190.52 60.97 190.60 74.99 C 195.86 75.02 201.11 74.94 206.36 75.06 C 203.53 72.92 201.08 69.87 201.08 66.16 C 200.89 56.76 201.02 47.36 201.01 37.97 C 200.80 33.59 203.73 29.08 208.15 28.18 C 212.40 27.52 216.48 29.54 220.71 29.60 C 223.18 28.59 225.82 28.32 228.48 28.48 C 228.44 43.98 228.49 59.48 228.45 74.97 C 238.68 75.03 248.90 74.99 259.13 74.99 C 259.14 50.00 259.13 25.00 259.13 0.00 L 278.72 0.00 C 285.04 0.90 290.48 6.41 290.55 12.92 C 290.67 29.28 290.57 45.65 290.60 62.02 C 290.86 67.55 287.33 72.48 282.60 75.05 C 289.49 74.96 296.39 74.97 303.29 75.05 C 302.23 72.86 301.83 70.45 301.97 68.03 C 302.11 63.01 301.77 57.97 302.14 52.96 C 302.20 49.99 305.14 47.91 307.94 48.02 C 312.92 47.89 317.89 48.07 322.87 47.99 C 322.87 43.33 322.87 38.67 322.87 34.01 C 318.20 34.00 313.54 34.00 308.87 34.01 C 308.86 36.34 308.87 38.67 308.86 41.00 C 306.75 41.00 304.64 41.00 302.54 41.00 C 302.73 37.32 301.72 33.17 303.89 29.91 C 305.51 27.65 308.62 28.07 311.05 27.97 C 315.66 28.11 320.28 27.75 324.87 28.16 C 328.12 28.56 329.29 32.12 329.23 34.95 C 329.33 48.29 329.24 61.64 329.26 74.99 C 333.94 75.02 338.63 74.96 343.32 75.05 C 341.02 71.44 341.64 67.06 341.59 63.00 C 341.62 53.34 341.58 43.68 341.61 34.02 C 339.74 34.01 337.86 34.00 336.00 33.99 C 336.00 32.00 336.00 30.00 336.00 28.01 C 337.86 28.00 339.74 27.99 341.61 27.98 C 341.60 22.99 341.60 17.99 341.60 13.00 C 343.77 13.00 345.95 13.00 348.13 13.00 C 348.13 18.00 348.13 22.99 348.13 27.99 C 350.88 27.99 353.64 28.01 356.40 28.01 C 356.39 30.00 356.39 32.00 356.40 33.99 C 353.64 33.99 350.88 34.01 348.13 34.01 C 348.13 46.00 348.14 58.00 348.13 69.99 C 350.88 69.99 353.64 70.01 356.40 70.01 C 356.39 71.67 356.39 73.32 356.39 74.98 C 359.69 74.99 362.98 74.99 366.28 75.05 C 365.22 72.84 364.84 70.42 364.97 67.98 C 365.11 62.96 364.77 57.93 365.14 52.92 C 365.23 50.01 368.08 47.95 370.85 48.03 C 375.85 47.88 380.86 48.07 385.87 47.99 C 385.87 43.33 385.87 38.67 385.87 34.01 C 381.20 33.99 376.54 33.99 371.87 34.01 C 371.86 36.34 371.87 38.66 371.87 40.99 C 369.75 41.00 367.64 41.00 365.54 41.00 C 365.72 37.32 364.72 33.17 366.89 29.91 C 368.76 27.41 372.27 28.12 374.98 27.97 C 379.57 28.22 384.24 27.51 388.77 28.39 C 391.89 29.46 392.25 33.18 392.27 35.99 C 392.27 48.99 392.27 61.99 392.26 74.99 C 407.06 75.05 421.86 74.92 436.66 75.06 C 435.08 73.67 433.36 72.36 432.24 70.56 C 429.13 65.58 431.37 57.87 437.06 55.90 C 441.09 54.23 445.95 54.96 449.43 57.55 C 454.26 62.56 453.15 71.82 446.76 75.05 C 460.06 74.97 473.36 74.96 486.66 75.06 C 485.07 73.67 483.35 72.35 482.23 70.54 C 479.14 65.56 481.38 57.87 487.06 55.90 C 491.08 54.24 495.90 54.96 499.38 57.51 C 504.29 62.51 503.15 71.82 496.74 75.05 C 510.05 74.97 523.36 74.96 536.67 75.06 C 535.09 73.68 533.38 72.38 532.26 70.59 C 529.13 65.63 531.35 57.90 537.03 55.91 C 541.08 54.23 545.96 54.95 549.45 57.57 C 553.04 61.43 553.51 67.94 550.25 72.16 C 547.99 74.81 544.47 76.08 541.04 76.01 C 489.30 75.99 437.55 76.00 385.80 76.00 C 385.78 75.50 385.73 74.50 385.70 74.00 C 380.17 74.90 374.63 76.05 369.00 76.03 C 353.60 75.97 338.20 76.01 322.80 76.00 C 322.78 75.50 322.73 74.50 322.70 74.00 C 317.50 74.84 312.30 75.92 307.01 76.01 C 280.82 76.01 254.63 75.96 228.44 76.03 C 228.33 80.68 228.83 85.37 228.19 89.99 C 227.91 91.95 226.21 93.07 224.67 94.00 L 206.05 94.00 C 201.23 92.59 201.50 87.01 201.71 83.00 C 203.89 83.00 206.08 83.00 208.26 83.00 C 208.26 84.66 208.26 86.33 208.26 87.99 C 212.80 88.01 217.33 88.01 221.87 87.99 C 221.87 84.00 221.87 80.00 221.87 76.01 C 190.89 75.99 159.91 76.01 128.93 76.00 C 128.91 75.49 128.87 74.48 128.85 73.97 C 116.41 77.22 103.50 75.64 90.80 76.00 C 90.78 75.50 90.73 74.50 90.70 74.00 C 85.16 74.90 79.62 76.05 73.98 76.03 C 49.32 75.93 24.66 76.09 0.00 75.95 L 0.00 0.00 M 265.87 6.01 C 265.86 27.34 265.86 48.66 265.87 69.99 C 269.64 69.92 273.42 70.23 277.18 69.81 C 280.89 69.25 283.98 65.83 283.72 62.00 C 283.74 46.00 283.75 30.00 283.71 14.00 C 283.89 10.92 281.98 7.98 279.18 6.75 C 274.94 5.24 270.28 6.31 265.87 6.01 M 38.74 34.00 C 38.73 46.00 38.73 58.00 38.74 70.00 C 43.58 70.00 48.42 70.00 53.27 70.00 C 53.27 58.00 53.27 46.00 53.26 34.00 C 48.42 34.00 43.58 34.00 38.74 34.00 M 114.47 40.10 C 114.43 47.41 114.50 54.71 114.44 62.02 C 114.50 64.36 114.30 67.15 116.12 68.95 C 120.11 71.39 124.79 68.79 128.90 67.92 C 128.83 56.62 128.88 45.32 128.87 34.01 C 125.25 34.11 121.60 33.71 118.01 34.22 C 115.22 34.61 114.45 37.70 114.47 40.10 M 169.68 36.52 C 169.81 49.35 169.69 62.17 169.74 75.00 C 174.53 75.00 179.33 75.00 184.13 75.00 C 184.14 61.31 184.14 47.63 184.13 33.95 C 179.32 34.88 174.44 35.39 169.68 36.52 M 208.94 34.90 C 208.11 36.45 207.29 38.08 207.47 39.90 C 207.46 47.97 207.46 56.03 207.47 64.10 C 207.27 66.47 208.37 69.36 210.99 69.78 C 214.59 70.28 218.25 69.90 221.87 69.99 C 221.88 58.68 221.83 47.38 221.90 36.07 C 217.71 35.00 213.18 32.95 208.94 34.90 M 76.39 54.01 C 76.40 59.35 76.41 64.69 76.38 70.03 C 81.22 69.21 86.14 68.90 90.94 67.85 C 90.82 63.23 90.88 58.62 90.87 54.01 C 86.05 53.99 81.22 53.99 76.39 54.01 M 308.39 54.02 C 308.40 59.36 308.40 64.70 308.39 70.04 C 313.22 69.19 318.14 68.90 322.94 67.84 C 322.82 63.23 322.88 58.62 322.87 54.01 C 318.04 54.00 313.22 53.99 308.39 54.02 M 371.39 54.02 C 371.40 59.36 371.41 64.69 371.38 70.03 C 376.22 69.20 381.14 68.90 385.94 67.85 C 385.82 63.23 385.88 58.62 385.87 54.01 C 381.04 54.00 376.21 53.98 371.39 54.02 M 438.42 59.63 C 433.04 60.85 432.57 69.78 438.09 71.10 C 442.45 73.58 450.02 70.73 449.27 65.01 C 449.23 59.76 442.50 57.89 438.42 59.63 M 488.46 59.61 C 484.76 60.53 483.28 64.87 484.63 68.20 C 487.60 73.87 498.87 73.08 499.28 65.95 C 500.01 60.25 492.89 57.67 488.46 59.61 M 538.50 59.60 C 534.22 60.58 532.85 66.37 535.47 69.55 C 538.34 71.92 542.60 72.91 545.95 70.90 C 549.78 69.45 550.16 64.18 547.89 61.24 C 545.33 59.18 541.60 58.29 538.50 59.60 Z</item>
    </string-array>
   <integer-array name="svg_load_color">
        <item>@color/color_293A48</item>
    </integer-array>

    <string name="action_console">Console</string>
    <string name="action_stop">Stop</string>
    <string name="action_restart">Restart</string>
    <string name="action_reinstall">Reinstall</string>
    <string name="action_destroy">Destroy</string>
</resources>
